--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>ca.corbett</groupId>
             <artifactId>musicplayer</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8</version>
             <scope>provided</scope>
         </dependency>
 
