--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ca.corbett</groupId>
     <artifactId>ext-mp-scenery</artifactId>
-    <version>2.8.0-SNAPSHOT</version>
+    <version>2.8.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
