--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ca.corbett</groupId>
     <artifactId>ext-mp-scenery</artifactId>
-    <version>2.9.0</version>
+    <version>3.0.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>ca.corbett</groupId>
             <artifactId>musicplayer</artifactId>
-            <version>2.9</version>
+            <version>3.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
